tests/unit/default/syntax-error/099-add-pk-alias.x.t
---- IN ----
+PK@alias|
---- OUT ----
---- ERR ----
syntax: expected <table> after `+PK@alias` near `|` at position 9 - at line 1
---- EXIT ----
1
